Bug 140302 - Image repeats itself a number of times in an RTF (import issue)
Summary: Image repeats itself a number of times in an RTF (import issue)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Images
  Show dependency treegraph
 
Reported: 2021-02-09 18:51 UTC by Telesto
Modified: 2025-05-19 18:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT file (49.83 KB, application/vnd.oasis.opendocument.text)
2021-02-09 18:52 UTC, Telesto
Details
RTF File exported with 7.2 (125.63 KB, application/msword)
2021-02-09 18:52 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-02-09 18:51:55 UTC
Description:
Image repeats itself a number of times in an RTF (import issue) 

Steps to Reproduce:
1. Open the attached file
2. Save as RTF
3. File reload (scroll to page 3)

Actual Results:
The same image over and over

Expected Results:
No image at all


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3ed9bba283a6a67864c0928186e277240be0d9ba
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in
Version: 6.2.4.0.0+
Build ID: 5c5eab3522368d6baa7ab6ef1b6c9f5eaaab4fad
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

fine in
4.4.7.2
Comment 1 Telesto 2021-02-09 18:52:15 UTC
Created attachment 169630 [details]
ODT file
Comment 2 Telesto 2021-02-09 18:52:31 UTC
Created attachment 169631 [details]
RTF File exported with 7.2
Comment 3 mulla.tasanim 2021-02-09 21:31:57 UTC
Thank You for reporting the bug.

I can confirm the bug present in,

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 761a672d62df1891b9f4f367a499b220ab2b33fa
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 4 raal 2021-04-05 18:01:34 UTC
This seems to have begun at the below commit.
Adding Cc: to 	Miklos Vajna ; Could you possibly take a look at this one?
Thanks
bibisect-linux-64-6.1$ 3666cd12ec2891e91c7a1654ca96b1996856009e is the first bad commit
commit 3666cd12ec2891e91c7a1654ca96b1996856009e
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jul 24 17:28:30 2018 +0200

    source 7e863504854ae8ab286b32510aba8b363a8e314b

https://git.libreoffice.org/core/+/7e863504854ae8ab286b32510aba8b363a8e314b
tdf#81943 sw RTF import: fix missing wrap in background for in-table shape
Comment 5 BogdanB 2021-07-28 09:34:01 UTC
The same in Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 612d5b1a04fe022a34018d901bb9b052791d54e5
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Timur 2022-09-08 12:26:43 UTC
Bug is marked (import issue), LO saved RTF opens fine in MSO. Repro 7.5+.
Comment 7 Commit Notification 2022-09-13 06:45:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9fcf43a38773f81ef1833897c4e36d8db16c0b1

tdf#140302 RTF import: fix unexpected repeated image

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-09-13 13:28:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f07d4faac47cdf3cd09b036d07b03c6bb8d86372

tdf#140302 RTF import: fix unexpected repeated image

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2022-09-16 18:42:40 UTC
No problem in
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e46f9cc4b506c325cbe1060777bbc81fd1630f49
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was wrong in
Version: 7.4.0.2 / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded