writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -1773,9 +1773,11 @@ void RTFDocumentImpl::replayBuffer(RTFBuffer_t& rBuffer, RTFSprms* const pSprms,
 
             // Set current shape during replay, needed by e.g. wrap in
             // background.
+            RTFShape aShape = m_aStates.top().getShape();
             m_aStates.top().getShape() = std::get<1>(aTuple)->getShape();
 
             m_pSdrImport->resolve(std::get<1>(aTuple)->getShape(), true, RTFSdrImport::SHAPE);
+            m_aStates.top().getShape() = aShape;
             m_aStates.top().setCurrentBuffer(pCurrentBuffer);
         }
         else if (std::get<0>(aTuple) == BUFFER_ENDSHAPE)
